# givenergy-cli

./: givenergy-cli.py  pyproject.toml
